Fixing header -> rst format

--- a/rebuild_readme.ipynb
+++ b/rebuild_readme.ipynb
@@ -56,8 +56,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "header = \"\\n# astro-ph Coffee Bern\\n\"\n",
-    "footer = \"\\nBy Brett Morris and Clémence Fontanive\\n\""
+    "header = \"\"\"\"\n",
+    "astro-ph Coffee Bern\n",
+    "====================\n",
+    "\"\"\"\n",
+    "footer = \"\"\"\n",
+    "by Brett Morris and Clémence Fontanive\\n\""
    ]
   },
   {
