Reverting to markdown, using pandoc

--- a/rebuild_readme.ipynb
+++ b/rebuild_readme.ipynb
@@ -52,21 +52,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "header = \"\"\"\"\n",
+    "header = \"\"\"\n",
+    "\n",
     "astro-ph Coffee Bern\n",
     "====================\n",
+    "\n",
     "\"\"\"\n",
     "footer = \"\"\"\n",
-    "by Brett Morris and Clémence Fontanive\\n\""
+    "\n",
+    "by Brett Morris and Clémence Fontanive\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +92,22 @@
     "with open('README.rst', 'w') as html:\n",
     "    html.write(f\"{header}\" + '\\n'.join(unformatted_table) + f\"{footer}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pandoc README.rst --from RST --to markdown -o README.md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
